<resources>
    <string name="app_name">OpenBar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connexion">Connexion</string>
    <string name="inscription">Inscription</string>
    <string name="user" >Login</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm password</string>
    <string name="forgot_password">Forgot ?</string>
    <string name="new_account">New ?</string>
    <string name="logo">Logo de l\'application</string>
    <string name="email">abc@123.com</string>
    <string name="already_signup">Already sign in ?</string>
    <string name="male">M</string>
    <string name="female">F</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="title_activity_forget_mail">ForgetMailActivity</string>
    <string name="email_well_formed">Email is not well-formed</string>
    <string name="password_length">Password is lg than 8chars</string>
    <string name="pseudo_length">Pseudo is lg than 5 chars</string>
    <string name="sexe_type">You must choose a type !</string>
    <string name="password_same">Password fields must be the same</string>
    <string name="send_mail_forgot">Send</string>
    <string name="forget_password">Forget password</string>
    <string name="title_activity_focus">FocusActivity</string>
    <string name="action_favorite">profil</string>
    <string name="action_signout">Signout</string>
    <string name="title_activity_bar">BarActivity</string>
    <string name="title_activity_add_bar_map">AddBarMap</string>
    <string name="title_activity_profil">ProfilActivity</string>
    <string name="fill_correctly_field">Please fill fields correctly</string>
    <string name="verify_pseudo">verify the pseudo..</string>
    <string name="already_sign">You are already sign</string>
    <string name="checking">Cheking...</string>
    <string name="pseudo_already_use">Pseudo already used. Try an another</string>
    <string name="sign_done">Signup successfull ! Connexion...</string>
    <string name="sign_undo">Signup don\'t work ! Database is shutdown.</string>
    <string name="connect_undo">An error with pass or login. Try again</string>
    <string name="my_bars">My bars</string>
    <string name="no_bar_available">you haven\'t bars anymore</string>
    <string name="title_activity_dice_shaker">DiceShakerActivity</string>
</resources>
